--- a/src/App.css
+++ b/src/App.css
@@ -227,7 +227,42 @@ body{
   width: 100%;
   height: 300px;
 }
+.product-content {
+  height: 400px;
+  width: 400px;
+}
 
+.image-product {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+
+.productlist-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.toppinglist-image {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+.fs-7 {
+  font-size: 12px;
+}
+
+.toppinglist-card {
+  border: none;
+}
+
+.checked {
+  position: absolute;
+  top: 0;
+  right: 40px;
+  width: 20px;
+}
 .detailProduct .addCart{
   width: 92%;
   background-color: #BD0707;
